--- a/annie/templates/_macros.html
+++ b/annie/templates/_macros.html
@@ -103,18 +103,19 @@
 
 {%- endmacro %}
 {%- macro comment_block(comment)%}
+
 <div class="d-flex flex-start align-items-center">
     <i class="fas fa-user fa-2x me-3"></i>
     
     <div>
-        <h6 class="fw-bold mb-1">{{comment.user.username}}</h6>
+        <h6 class="fw-bold mb-1">{{comment.user.username if comment.user}}</h6>
         <p class="text-muted small mb-0">
             {{comment.created|timeago}}
         </p>
     </div>
 </div>
 
-<p class="mt-3 mb-4 pb-2">
+<p class="mt-3">
     {{comment.html|safe}}
 </p>
 <hr>
@@ -125,7 +126,7 @@
 
 {% set mapping = {"Success": "bg-success", "In Progress": "bg-info", "Failed":"bg-warning"} -%}
 
-{%if grade%}
+{%if grade and grade.overall%}
 {%if grade.overall>threshold%}
 {%set status="Success"%}
 {%else%}
@@ -136,7 +137,7 @@
 {%endif%}
 
 <span class="badge {{mapping[status]}}">{{status}}
-    {%if grade%}
+    {%if grade and grade.overall%}
     <span class="badge bg-light text-dark ms-2">{{grade.overall}}/100</span>
     <span class="visually-hidden">grade</span></span>
 {%endif%}
@@ -145,7 +146,7 @@
 {% macro grade_dot(grade,threshold=50) -%}
 
 {% set mapping = {"Success": "text-success", "In Progress": "text-info", "Failed":"text-warning"} -%}
-{%if grade%}
+{%if grade and grade.overall%}
 {%if grade.overall>threshold%}
 {%set status="Success"%}
 {%else%}
