Fix Error in Admin when Grading disabled

--- a/annie/templates/admin/index.html
+++ b/annie/templates/admin/index.html
@@ -10,11 +10,15 @@
           <div class="align-self-center">
             <i class="fas fa-clipboard-list text-danger fa-3x"></i>
           </div>
+          {%if config["GRADER"]%}
           <div class="text-end">
             <h3>{{n_ungraded}}</h3>
             <p class="mb-0">Submissions to grade</p>
             <a href="{{url_for('graderoverview.index')}}" class="stretched-link">Let's Grade</a>
           </div>
+          {%else%}
+          Grading is disabled
+          {%endif%}
         </div>
       </div>
     </div>
