--- a/annie/blueprints/user/templates/index.html
+++ b/annie/blueprints/user/templates/index.html
@@ -14,7 +14,6 @@
 <main class="container">
     <section class="my-5" id="welcome">
         {{flash_message()}}
-        <div class="alert alert-dark" role="alert"><b>Warning:</b> This is a first prototype, bugs and errors might occur frequently </div>
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-4 fw-bold lh-1">Hey {{user.username}}!</h1>
@@ -29,7 +28,7 @@
                 </div>
             </div>
             <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <img class="rounded-lg-3" src="{{ url_for('static', filename='img/now.jpg') }}" alt="" width="720">
+                <img class="rounded-lg-3" src="{{ url_for('static', filename='img/lama.jpg') }}" alt="" width="375">
             </div>
         </div>
     </section>
