Make the Button for showcasing configurable by the db

--- a/annie/blueprints/evaluation/templates/evaluation.html
+++ b/annie/blueprints/evaluation/templates/evaluation.html
@@ -5,8 +5,7 @@
 <main class="mt-5">
   <div class="container">
     <section id="welcome">
-      {% if config["ENABLE_SHOWCASE"] and not submission.showcase and not submission.assignment.path%}
-
+      {% if config["ENABLE_SHOWCASE"] and submission.assignment.showcaseable%}
       <button type="button" class="btn btn-outline-primary" data-mdb-ripple-color="dark" data-mdb-toggle="modal" data-mdb-target="#showcase-modal">
         Ready to show it to others?
       </button>
