--- a/annie/blueprints/user/templates/assignment.html
+++ b/annie/blueprints/user/templates/assignment.html
@@ -33,10 +33,13 @@
           <h6 class="mt-2">Grade</h6>
           {% if submissions%}
           {{grade_block(submissions[0].grade) if submissions[0].assignment.path is not none}}
+          {%else%}
+          No Grade available
           {%endif%}
         </div>
       </div>
     </div>
+    {%if assignment.github or assignment.student_nb%}
     <div class="col-md-2">
       <div class="border rounded-3 py-2">
         <div class="download text-center">
@@ -57,6 +60,7 @@
         </div>
       </div>
     </div>
+    {%endif%}
   </div>
   <section id="details">{{assignment.description}}
   </section>
