Admin Allow Display even if Grader is disabled

--- a/annie/templates/admin/index.html
+++ b/annie/templates/admin/index.html
@@ -10,7 +10,7 @@
           <div class="align-self-center">
             <i class="fas fa-clipboard-list text-danger fa-3x"></i>
           </div>
-          {%if config["GRADER"]%}
+          {%if config["ENABLE_GRADER"]%}
           <div class="text-end">
             <h3>{{n_ungraded}}</h3>
             <p class="mb-0">Submissions to grade</p>
